# digit

./: Cargo.toml  LICENSE.md  README.md
src/: enum.rs  lib.rs
src/traits/: mod.rs  termination.rs  try_from_str.rs
tests/: termination.rs
