[package]
name = "digit"
version = "0.2.0"
authors = ["Peter MIKOLA <mikopet@gmail.com>"]
edition = "2021"

description = "A simple lib for converting digits back and forth"
readme = "README.md"
repository = "https://github.com/Mikopet/digit"
license = "MIT"

keywords = ["digit", "number", "emoji", "convert"]
categories = ["command-line-interface", "data-structures", "encoding", "value-formatting"]

[dependencies]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

